# jupyter-glances-proxy

./: .editorconfig  Makefile  README.md  docker-compose.yaml  pyproject.toml
setup/: Dockerfile  config_system.py
src/jupyter_glances_proxy/: __init.__py  __init__.py  jupyter_config.py
